# xllm-ops

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_zh.md  build.sh  log
atb_customize/: .gitignore  CMakeLists.txt  build.sh
atb_customize/configs/ops/: op_list.yaml
atb_customize/customize_ops_configs/: customize_ops_info.ini
atb_customize/include/: custom_paged_attention_function.h  customize_op_params.h
atb_customize/ops/: CMakeLists.txt
atb_customize/ops/custom_paged_attention/: README.md
atb_customize/ops/custom_paged_attention/kernel_implement/: CMakeLists.txt  custom_paged_attention_kernel.cpp  custom_paged_attention_operation.cpp
atb_customize/ops/custom_paged_attention/kernel_implement/op_kernel/: custom_paged_attention_decoder_nd_common.cce  custom_paged_attention_mask_mix.cce
atb_customize/ops/custom_paged_attention/kernel_implement/tiling/: custom_paged_attention_tiling.cpp  custom_paged_attention_tiling.h  custom_paged_attention_tiling_dependency.cpp  custom_paged_attention_tiling_dependency.h
atb_customize/ops/custom_paged_attention/operation_implement/: custom_paged_attention_operation.cpp  custom_paged_attention_operation.h  custom_paged_attention_ops_runner.cpp  custom_paged_attention_ops_runner.h  custom_paged_attention_ops_runner_910a.cpp  custom_paged_attention_ops_runner_910a.h  custom_paged_attention_param.cpp  custom_paged_attention_param.h  custom_paged_attention_runner_utils.cpp  custom_paged_attention_runner_utils.h
atb_customize/ops/custom_paged_attention/tests/: CMakeLists.txt  custom_paged_attention_test.cpp  test_util.h
atb_customize/ops/customize_blockcopy/operation_implement/: customize_block_copy_operation.cpp  customize_block_copy_ops_runner.cpp
atb_customize/ops/customize_blockcopy/tests/: CMakeLists.txt  customize_blockcopy_test.cpp
cmake/: config.cmake  custom_build.cmake  func.cmake  obj_func.cmake
cmake/modules/: Findaicpu.cmake
cmake/scripts/: prepare.sh
common/: kernel_common.hpp  tiling_templates_registry.h
common/error/: error_log.h
common/tiling/: tiling_base.h  tiling_templates_registry.h
src/index_group_matmul/: CMakeLists.txt
src/index_group_matmul/op_host/: index_group_matmul.cpp
src/index_group_matmul/op_kernel/: index_group_matmul.cpp
src/multi_latent_attention/: CMakeLists.txt
src/multi_latent_attention/op_host/: compare.h  math.cpp  multi_latent_attention_tiling.h  multi_latent_attention_tiling_dependency.cpp  multi_latent_attention_tiling_impl.cpp  multi_latent_attention_tiling_impl.h
src/multi_latent_attention/op_kernel/: mla.h
src/pp_mat_mul/: CMakeLists.txt
src/pp_mat_mul/op_host/: pp_mat_mul.cpp  pp_mat_mul_default.cpp  pp_mat_mul_default.h  pp_mat_mul_tiling.h
src/pp_mat_mul/op_kernel/: pp_mat_mul_accum_atomic_kernel.h  pp_mat_mul_bf16_nd_nz_nd_kernel.h  pp_mat_mul_common.h  pp_mat_mul_fp16_kernel.h
src/pp_mat_mul/op_kernel/utils/kernel/: common.h  common_func.h  layout.h  mem.h  mma.h  simd.h
src/pp_mat_mul/op_kernel/utils/kernel/iterators/: gm_to_l1_iterator.h  l0c_to_l1_iterator.h  l0c_to_ub_iterator.h  l1_to_bt_iterator.h  l1_to_fb_iterator.h
src/replace_token/: CMakeLists.txt
test/: CMakeLists.txt  beam_search.h  beam_search_test.cpp
test/cpp_test/: CMakeLists.txt  beam_search.h  beam_search_test.cpp  convert_kv_cache_format_test.cpp
test/python_test/: RegisterOps.cpp  build_and_run.sh  custom_ops.py  test_beam_search_group.py  test_causal_conv1d.py  test_causal_conv1d_update.py  test_rec_constrained_topk.py  test_select_unshared_kv.py  test_x_attention.py  (+1 more)
xllm_ops/: build.sh  build_aclnn.sh
xllm_ops/apply_top_k_top_p_with_sorted/: CMakeLists.txt
xllm_ops/cache_unshared_kv/: CMakeLists.txt  cache_unshared_kv.cpp  cache_unshared_kv.h  cache_unshared_kv_cpu.cpp  cache_unshared_kv_tiling.h
xllm_ops/causal_conv1d/: CMakeLists.txt  causal_conv1d_fn.h  causal_conv1d_infershape.cpp  causal_conv1d_tiling.cpp  causal_conv1d_tiling_planner.h  causal_conv1d_tiling_utils.h  causal_conv1d_tiling_validation.h  error_log.h
xllm_ops/convert_kv_cache_format/: CMakeLists.txt  convert_kv_cache_format_cpu.cpp
xllm_ops/index_group_matmul/: CMakeLists.txt  index_group_matmul_cpu.cpp  index_group_matmul_tiling.h
xllm_ops/index_group_matmul/op_kernel/: index_group_matmul.h  index_group_matmul_mlt512.h
xllm_ops/mla_preprocess/: CMakeLists.txt  mla_preprocess_infershape.cpp  mla_preprocess_tiling.cpp  mla_preprocess_tiling.h
xllm_ops/mla_preprocess_v2/: CMakeLists.txt  mla_preprocess_v2.cpp  mla_preprocess_v2_tiling.cpp
xllm_ops/moe_fused_add_topk/: CMakeLists.txt  moe_fused_add_topk_cpu.cpp  moe_fused_add_topk_tiling.h
xllm_ops/moe_fused_reducesum_div/: CMakeLists.txt  moe_fused_reducesum_div_cpu.cpp
xllm_ops/moe_grouped_matmul_swiglu_quant/: CMakeLists.txt  moe_grouped_matmul_swiglu_quant_tiling.cpp
xllm_ops/moe_init_routing_v3/: CMakeLists.txt  aclnn_moe_init_routing_v3.cpp  aclnn_moe_init_routing_v3.h  moe_init_routing_v3.cpp  moe_init_routing_v3_def.cpp  moe_init_routing_v3_infershape.cpp  moe_init_routing_v3_tiling.cpp  moe_init_routing_v3_tiling.h  moe_init_routing_v3_tiling_base.cpp  moe_v3_mrgsort_custom.h  moe_v3_sort_multi_core.h
xllm_ops/pp_mat_mul/: CMakeLists.txt  pp_mat_mul.cpp  pp_mat_mul_bf16_kernel.h  pp_mat_mul_ein_sum_kernel.h  pp_mat_mul_f16_nd_nz_nd_kernel.h  pp_mat_mul_f16_nz_kernel.h  pp_mat_mul_tiling.cpp
xllm_ops/pp_mat_mul/op_host/: pp_mat_mul_common_tiling.h  pp_mat_mul_info.h
xllm_ops/pp_mat_mul/op_kernel/: pp_mat_mul_with_bias_kernel.h
xllm_ops/pp_mat_mul/op_kernel/utils/kernel/: kernel_utils.h  utils.h
xllm_ops/pp_mat_mul/utils/kernel/: hardware.h  iterator.h  set_fpc.h
xllm_ops/pp_mat_mul/utils/kernel/iterators/: gm_to_ub_iterator.h  l0c_to_gm_iterator.h  l1_to_l0_iterator.h  l1_to_ub_iterator.h
xllm_ops/pp_matmul_opt/: CMakeLists.txt  pp_matmul_opt_tiling.h
xllm_ops/rec_constrained_top_k/: CMakeLists.txt  README.md  rec_constrained_top_k_cpu.cpp  rec_constrained_top_k_tiling.h
xllm_ops/replace_token/: CMakeLists.txt
xllm_ops/replace_token/op_host/: replace_token.cpp
(+45 files in other folders)
